# matrixinspector

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  configure  mkdocs.yml  packagecore.yaml
doc/: 02_file.md  02_intro.md  03_edit.md  04_analyze.md  index.md
src/: CMakeLists.txt  Types.hpp
src/Data/: CSRMatrix.cpp  CSRMatrix.hpp  DataStorage.cpp  DataStorage.hpp  DenseMatrix.cpp  DenseMatrix.hpp  HeatMap.cpp  HeatMap.hpp  Matrix.cpp  Matrix.hpp  SparseMatrix.cpp  SparseMatrix.hpp
src/GUI/: App.cpp  App.hpp  MainWindow.cpp  MainWindow.hpp  ReorderWindow.cpp  ReorderWindow.hpp  SampleWindow.cpp  SampleWindow.hpp  StatsWindow.cpp  StatsWindow.hpp  WindowProperties.hpp
src/Operations/: Reorder.cpp  Reorder.hpp  Sample.cpp  Sample.hpp  Stats.cpp  Stats.hpp
src/Test/: CMakeLists.txt  CSRMatrixTest.cpp  ReorderTest.cpp  SortTest.cpp  StatsTest.cpp  StringTest.cpp  UnitTest.hpp
src/Utility/: Debug.hpp  Linear.hpp  PrefixSum.hpp  Random.hpp  Sort.hpp  String.cpp  String.hpp  Time.cpp  Time.hpp  Timer.hpp
src/View/: HeatMapView.cpp  HeatMapView.hpp  View.cpp  View.hpp
